compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__pipe_value_type_mismatch_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub fn main() -> String {\n            eat_veggie\n            |> Orange\n         }\n\n         type Fruit{ Orange }\n         type Veg{ Lettuce }\n\n         fn eat_veggie(v: Veg) -> String {\n            \"Ok\"\n         }"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:16
  │
3 │             |> Orange
  │                ^^^^^^

Expected type:

    fn(fn(Veg) -> String) -> a

Found type:

    Fruit
